--- a/catalog.html
+++ b/catalog.html
@@ -228,7 +228,7 @@
 						<button type="button" data-state="off" class="see-all accent f_09 mt-2" onclick="toggleList(this)"></button>
 					</div>
 					<div class="col-md-8 col-lg-9">
-						<div class="row g-3 g-sm-4 g-xxl-5 row-cols-2 row-cols-lg-3 row-cols-xxl-4">
+						<div class="row g-3 g-sm-4 row-cols-2 row-cols-lg-3 row-cols-xxl-4">
 							<div>
 								<div class="product">
 									<a href="product-1.html"><img src="img/product/Шампунь восстанавливающий Nutri-Repair (vegan), 300 мл.jpg" alt="" class="photo mb-2 mb-sm-4"></a>
