--- a/index.html
+++ b/index.html
@@ -985,7 +985,7 @@
 								<fieldset class="carousel-item active">
 									<div class="indicators mb-4"></div>
 									<div class="font-2 text-center f_15 mb-3">Шаг 1</div>
-									<div class="font-2 f_14 fw_5 text-center mb-4 mb-sm-5">Пришлите один или несколько  фотопотретов в дневном освещении</div>
+									<div class="font-2 f_14 fw_5 text-center mb-4 mb-sm-5">Пришлите один или несколько фотопортретов в дневном освещении</div>
 									<div class="row row-cols-sm-2">
 										<div class="mb-4 mb-sm-0">
 											<img src="img/sample.jpg" alt="" id="file-img-1" class="img-fluid">
