--- a/personal-account-2.html
+++ b/personal-account-2.html
@@ -137,8 +137,8 @@
 									</div>
 									<img src="img/icons/mark-favorite.png" alt="Избранное" class="mark-fav">
 									<div class="right-marks">
-										<img src="img/icons/mark-new.png" alt="Скидка" class="mark-sale">
-										<img src="img/icons/mark-sale.png" alt="Скидка" class="mark-sale">
+										<!-- <img src="img/icons/mark-new.png" alt="Скидка" class="mark-sale">
+										<img src="img/icons/mark-sale.png" alt="Скидка" class="mark-sale"> -->
 									</div>
 								</div>
 							</div>
@@ -159,10 +159,10 @@
 										</div>
 										<div class="f_13 fw_5 black">846 ₽</div>
 									</div>
-									<!-- <img src="img/icons/mark-favorite.png" alt="Избранное" class="mark-fav"> -->
+									<img src="img/icons/mark-favorite.png" alt="Избранное" class="mark-fav">
 									<div class="right-marks">
-										<img src="img/icons/mark-new.png" alt="Скидка" class="mark-sale">
-										<!-- <img src="img/icons/mark-sale.png" alt="Скидка" class="mark-sale"> -->
+										<!-- <img src="img/icons/mark-new.png" alt="Скидка" class="mark-sale">
+										<img src="img/icons/mark-sale.png" alt="Скидка" class="mark-sale"> -->
 									</div>
 								</div>
 							</div>
@@ -183,10 +183,10 @@
 										</div>
 										<div class="f_13 fw_5 black">846 ₽</div>
 									</div>
-									<!-- <img src="img/icons/mark-favorite.png" alt="Избранное" class="mark-fav"> -->
+									<img src="img/icons/mark-favorite.png" alt="Избранное" class="mark-fav">
 									<div class="right-marks">
-										<img src="img/icons/mark-new.png" alt="Скидка" class="mark-sale">
-										<!-- <img src="img/icons/mark-sale.png" alt="Скидка" class="mark-sale"> -->
+										<!-- <img src="img/icons/mark-new.png" alt="Скидка" class="mark-sale">
+										<img src="img/icons/mark-sale.png" alt="Скидка" class="mark-sale"> -->
 									</div>
 								</div>
 							</div>
@@ -207,10 +207,10 @@
 										</div>
 										<div class="f_13 fw_5 black">846 ₽</div>
 									</div>
-									<!-- <img src="img/icons/mark-favorite.png" alt="Избранное" class="mark-fav"> -->
+									<img src="img/icons/mark-favorite.png" alt="Избранное" class="mark-fav">
 									<div class="right-marks">
-										<img src="img/icons/mark-new.png" alt="Скидка" class="mark-sale">
-										<!-- <img src="img/icons/mark-sale.png" alt="Скидка" class="mark-sale"> -->
+										<!-- <img src="img/icons/mark-new.png" alt="Скидка" class="mark-sale">
+										<img src="img/icons/mark-sale.png" alt="Скидка" class="mark-sale"> -->
 									</div>
 								</div>
 							</div>
@@ -231,10 +231,10 @@
 										</div>
 										<div class="f_13 fw_5 black">846 ₽</div>
 									</div>
-									<!-- <img src="img/icons/mark-favorite.png" alt="Избранное" class="mark-fav"> -->
+									<img src="img/icons/mark-favorite.png" alt="Избранное" class="mark-fav">
 									<div class="right-marks">
-										<img src="img/icons/mark-new.png" alt="Скидка" class="mark-sale">
-										<!-- <img src="img/icons/mark-sale.png" alt="Скидка" class="mark-sale"> -->
+										<!-- <img src="img/icons/mark-new.png" alt="Скидка" class="mark-sale">
+										<img src="img/icons/mark-sale.png" alt="Скидка" class="mark-sale"> -->
 									</div>
 								</div>
 							</div>
@@ -255,10 +255,10 @@
 										</div>
 										<div class="f_13 fw_5 black">846 ₽</div>
 									</div>
-									<!-- <img src="img/icons/mark-favorite.png" alt="Избранное" class="mark-fav"> -->
+									<img src="img/icons/mark-favorite.png" alt="Избранное" class="mark-fav">
 									<div class="right-marks">
-										<img src="img/icons/mark-new.png" alt="Скидка" class="mark-sale">
-										<!-- <img src="img/icons/mark-sale.png" alt="Скидка" class="mark-sale"> -->
+										<!-- <img src="img/icons/mark-new.png" alt="Скидка" class="mark-sale">
+										<img src="img/icons/mark-sale.png" alt="Скидка" class="mark-sale"> -->
 									</div>
 								</div>
 							</div>
@@ -279,10 +279,10 @@
 										</div>
 										<div class="f_13 fw_5 black">846 ₽</div>
 									</div>
-									<!-- <img src="img/icons/mark-favorite.png" alt="Избранное" class="mark-fav"> -->
+									<img src="img/icons/mark-favorite.png" alt="Избранное" class="mark-fav">
 									<div class="right-marks">
-										<img src="img/icons/mark-new.png" alt="Скидка" class="mark-sale">
-										<!-- <img src="img/icons/mark-sale.png" alt="Скидка" class="mark-sale"> -->
+										<!-- <img src="img/icons/mark-new.png" alt="Скидка" class="mark-sale">
+										<img src="img/icons/mark-sale.png" alt="Скидка" class="mark-sale"> -->
 									</div>
 								</div>
 							</div>
@@ -303,10 +303,10 @@
 										</div>
 										<div class="f_13 fw_5 black">846 ₽</div>
 									</div>
-									<!-- <img src="img/icons/mark-favorite.png" alt="Избранное" class="mark-fav"> -->
+									<img src="img/icons/mark-favorite.png" alt="Избранное" class="mark-fav">
 									<div class="right-marks">
-										<img src="img/icons/mark-new.png" alt="Скидка" class="mark-sale">
-										<!-- <img src="img/icons/mark-sale.png" alt="Скидка" class="mark-sale"> -->
+										<!-- <img src="img/icons/mark-new.png" alt="Скидка" class="mark-sale">
+										<img src="img/icons/mark-sale.png" alt="Скидка" class="mark-sale"> -->
 									</div>
 								</div>
 							</div>
