--- a/personal-account-3-order.html
+++ b/personal-account-3-order.html
@@ -117,7 +117,182 @@
 						</nav>
 					</div>
 					<div class="col-md-9">
-						
+						<div class="order-full">
+							<div class="d-flex justify-content-between align-items-center mb-5">
+								<div class="d-flex">
+									<div class="font-2 f_15 fw_6">Заказ от 15 июля 2011</div>
+									<div class="font-2 f_15 ms-5">№ 648943</div>
+								</div>
+								<button type="button" class="accent f_09 fw_5 bb_1">Электронный чек</button>
+							</div>
+							<div class="order-info font-2 mb-5">
+								<div class="row row-cols-2 gx-5">
+									<div>
+										<div class="mb-4">Адрес доставки: г. Казань, ул. Профсоюзная д 15 кв 10</div>
+										<div class="mb-4">Получатель: Анастасия Смирнова</div>
+										<div class="mb-4">Тел.: <a href="tel:+79621235678">+7 (962) 123 56 78</a></div>
+									</div>
+									<div>
+										<div class="mb-4">Оплата: Онлай MasterCard **1234</div>
+										<div class="mb-4">Стоимость товаров: 1432 ₽</div>
+										<div class="mb-4">Стоимость доставки: 200₽</div>
+										<div>Итого: <span class="f_13 fw_5">1632 ₽</span></div>
+									</div>
+								</div>
+							</div>
+
+							<div class="row g-3 g-sm-4 row-cols-2 row-cols-lg-3 row-cols-xxl-4">
+								<div>
+									<div class="product">
+										<a href="product-1.html"><img src="img/product/Шампунь восстанавливающий Nutri-Repair (vegan), 300 мл.jpg" alt="" class="photo mb-2 mb-sm-4"></a>
+										<div class="text mb-2 mb-sm-4">Шампунь восстанавливающий Nutri-Repair (vegan), 300 мл</div>
+										<div class="d-flex justify-content-between align-items-center">
+											<div class="add-to-cart">
+												<div class="count-enter">
+													<button type="button" onclick="remove(this)">-</button>
+													<div class="fw_5 f_08">
+														<span class="">1</span><span> шт</span>
+													</div>
+													<button type="button">+</button>
+												</div>
+												<button type="button" class="btn_main px-3 px-sm-4 py-2" onclick="addToCart(this)"><span class="f_08">В корзину</span></button>
+											</div>
+											<div class="f_13 fw_5 black">846 ₽</div>
+										</div>
+										<img src="img/icons/mark-favorite.png" alt="Избранное" class="mark-fav">
+										<div class="right-marks">
+											<img src="img/icons/mark-new.png" alt="Скидка" class="mark-sale">
+											<img src="img/icons/mark-sale.png" alt="Скидка" class="mark-sale">
+										</div>
+									</div>
+								</div>
+								<div>
+									<div class="product">
+										<a href="product-1.html"><img src="img/product/Шампунь восстанавливающий Nutri-Repair (vegan), 300 мл.jpg" alt="" class="photo mb-2 mb-sm-4"></a>
+										<div class="text mb-2 mb-sm-4">Шампунь восстанавливающий Nutri-Repair (vegan), 300 мл</div>
+										<div class="d-flex justify-content-between align-items-center">
+											<div class="add-to-cart">
+												<div class="count-enter">
+													<button type="button" onclick="remove(this)">-</button>
+													<div class="fw_5 f_08">
+														<span class="">1</span><span> шт</span>
+													</div>
+													<button type="button">+</button>
+												</div>
+												<button type="button" class="btn_main px-3 px-sm-4 py-2" onclick="addToCart(this)"><span class="f_08">В корзину</span></button>
+											</div>
+											<div class="f_13 fw_5 black">846 ₽</div>
+										</div>
+										<img src="img/icons/mark-favorite.png" alt="Избранное" class="mark-fav">
+										<div class="right-marks">
+											<img src="img/icons/mark-new.png" alt="Скидка" class="mark-sale">
+											<img src="img/icons/mark-sale.png" alt="Скидка" class="mark-sale">
+										</div>
+									</div>
+								</div>
+								<div>
+									<div class="product">
+										<a href="product-1.html"><img src="img/product/Шампунь восстанавливающий Nutri-Repair (vegan), 300 мл.jpg" alt="" class="photo mb-2 mb-sm-4"></a>
+										<div class="text mb-2 mb-sm-4">Шампунь восстанавливающий Nutri-Repair (vegan), 300 мл</div>
+										<div class="d-flex justify-content-between align-items-center">
+											<div class="add-to-cart">
+												<div class="count-enter">
+													<button type="button" onclick="remove(this)">-</button>
+													<div class="fw_5 f_08">
+														<span class="">1</span><span> шт</span>
+													</div>
+													<button type="button">+</button>
+												</div>
+												<button type="button" class="btn_main px-3 px-sm-4 py-2" onclick="addToCart(this)"><span class="f_08">В корзину</span></button>
+											</div>
+											<div class="f_13 fw_5 black">846 ₽</div>
+										</div>
+										<img src="img/icons/mark-favorite.png" alt="Избранное" class="mark-fav">
+										<div class="right-marks">
+											<img src="img/icons/mark-new.png" alt="Скидка" class="mark-sale">
+											<img src="img/icons/mark-sale.png" alt="Скидка" class="mark-sale">
+										</div>
+									</div>
+								</div>
+								<div>
+									<div class="product">
+										<a href="product-1.html"><img src="img/product/Шампунь восстанавливающий Nutri-Repair (vegan), 300 мл.jpg" alt="" class="photo mb-2 mb-sm-4"></a>
+										<div class="text mb-2 mb-sm-4">Шампунь восстанавливающий Nutri-Repair (vegan), 300 мл</div>
+										<div class="d-flex justify-content-between align-items-center">
+											<div class="add-to-cart">
+												<div class="count-enter">
+													<button type="button" onclick="remove(this)">-</button>
+													<div class="fw_5 f_08">
+														<span class="">1</span><span> шт</span>
+													</div>
+													<button type="button">+</button>
+												</div>
+												<button type="button" class="btn_main px-3 px-sm-4 py-2" onclick="addToCart(this)"><span class="f_08">В корзину</span></button>
+											</div>
+											<div class="f_13 fw_5 black">846 ₽</div>
+										</div>
+										<img src="img/icons/mark-favorite.png" alt="Избранное" class="mark-fav">
+										<div class="right-marks">
+											<img src="img/icons/mark-new.png" alt="Скидка" class="mark-sale">
+											<img src="img/icons/mark-sale.png" alt="Скидка" class="mark-sale">
+										</div>
+									</div>
+								</div>
+								<div>
+									<div class="product">
+										<a href="product-1.html"><img src="img/product/Шампунь восстанавливающий Nutri-Repair (vegan), 300 мл.jpg" alt="" class="photo mb-2 mb-sm-4"></a>
+										<div class="text mb-2 mb-sm-4">Шампунь восстанавливающий Nutri-Repair (vegan), 300 мл</div>
+										<div class="d-flex justify-content-between align-items-center">
+											<div class="add-to-cart">
+												<div class="count-enter">
+													<button type="button" onclick="remove(this)">-</button>
+													<div class="fw_5 f_08">
+														<span class="">1</span><span> шт</span>
+													</div>
+													<button type="button">+</button>
+												</div>
+												<button type="button" class="btn_main px-3 px-sm-4 py-2" onclick="addToCart(this)"><span class="f_08">В корзину</span></button>
+											</div>
+											<div class="f_13 fw_5 black">846 ₽</div>
+										</div>
+										<img src="img/icons/mark-favorite.png" alt="Избранное" class="mark-fav">
+										<div class="right-marks">
+											<img src="img/icons/mark-new.png" alt="Скидка" class="mark-sale">
+											<img src="img/icons/mark-sale.png" alt="Скидка" class="mark-sale">
+										</div>
+									</div>
+								</div>
+								<div>
+									<div class="product">
+										<a href="product-1.html"><img src="img/product/Шампунь восстанавливающий Nutri-Repair (vegan), 300 мл.jpg" alt="" class="photo mb-2 mb-sm-4"></a>
+										<div class="text mb-2 mb-sm-4">Шампунь восстанавливающий Nutri-Repair (vegan), 300 мл</div>
+										<div class="d-flex justify-content-between align-items-center">
+											<div class="add-to-cart">
+												<div class="count-enter">
+													<button type="button" onclick="remove(this)">-</button>
+													<div class="fw_5 f_08">
+														<span class="">1</span><span> шт</span>
+													</div>
+													<button type="button">+</button>
+												</div>
+												<button type="button" class="btn_main px-3 px-sm-4 py-2" onclick="addToCart(this)"><span class="f_08">В корзину</span></button>
+											</div>
+											<div class="f_13 fw_5 black">846 ₽</div>
+										</div>
+										<img src="img/icons/mark-favorite.png" alt="Избранное" class="mark-fav">
+										<div class="right-marks">
+											<img src="img/icons/mark-new.png" alt="Скидка" class="mark-sale">
+											<img src="img/icons/mark-sale.png" alt="Скидка" class="mark-sale">
+										</div>
+									</div>
+								</div>
+							</div>
+
+							<button type="button" class="btn_main btn_1 mx-auto mt-5">
+								<span class="f_09">Повторить заказ</span>
+							</button>
+						</div>
+
 					</div>
 				</div>
 			</div>
